04-authz/l4-details-allow-productpage.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: details-l4-allow-productpage
  namespace: ambient-demo
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/ambient-demo/sa/bookinfo-productpage
